# httpi

./: .gitignore
with-go/: main.go
with-python/: app.py  requirements.txt
with-rust/: Cargo.toml  Rocket.toml
with-rust/src/: main.rs
