[package]
name = "with-rust"
version = "0.1.0"
authors = ["Samuel Colvin <s@muelcolvin.com>"]

[dependencies]
postgres = "0.15"
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
rand = "0.3"
rocket = "0.3.5"
rocket_codegen = "0.3.5"
rocket_contrib = "0.3.5"
serde = "1.0.25"
serde_json = "1.0.8"
serde_derive = "1.0.25"
time = "0.1"
